--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,15 +29,16 @@
 
 
   </div>
-
   <section class="feedback-container">
     <p class="score">On a scale from 0 to 10, <span id="score"></span></p>
-
+    
+    <div id="feedbackBox">
     <div class="feedback">
       <p><strong>Strengths:</strong></p>
       <p id="strengths"></p>
       <p><strong>Weaknesses:</strong></p>
       <p id="weaknesses"></p>
+    </div>
     </div>
   </section>
 
